--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,12 +1,19 @@
 {% extends 'blog/base.html' %}
 
+{% block title %} {{ block.super }} - 博文详情 {% endblock %}
+{% block h1 %} {{ block.super }} - 博文详情 {% endblock %}
 {% block content %}
 <div class="post">
   {% if post.published_date %}
-  <div class="date">
-    {{ post.published_date }}
-  </div>
+    <div class="date">
+       {{ post.published_date|date:'Y-m-d H:i' }}
+    </div>
+  {% else %}
+    <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">发布</a>
   {% endif %}
+
+  <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+  <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
   <h1>{{ post.title }}</h1>
   <p>{{ post.text|linebreaksbr }}</p>
 </div>
