--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,13 @@
 {% extends 'blog/base.html' %}
 
+{% block title %} {{ block.super }} - 博文列表{% endblock %}
 {% block content %}
  {% for post in posts %}
  <div class="post">
     <div class="date">
-	{{ post.published_date }}
+      {{ post.published_date|date:'Y-m-d H:i' }}
     </div>
-    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-    <p>{{ post.text|linebreaksbr }}</p>
+    <h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
  </div>
  {% endfor %}
 {% endblock %}
